<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Circle of Life</string>

    <!-- Login- & SignUp-->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="go_to_signup_text">No Account? Sign Up!</string>

    <string name="signup">SIGN UP</string>
    <string name="go_to_login_text">Already have an account? Login!</string>
    <string name="switch_server_sync_text">Enable Server Synchronization</string>
    <string name="switch_automatic_sync_text">Automatic Synchronization</string>

    <!-- Main Menu - Options Menu -->
    <string name="menu_item_sync">Sync now</string>
    <string name="menu_item_sync_enabled">Sync with server enabled</string>
    <string name="menu_item_auto_sync_enabled">Sync automatically</string>
    <string name="menu_item_logout">Logout</string>

    <!-- Main Menu - Other -->
    <string name="main_menu_welcome_text">Welcome Back</string>

    <string name="main_menu_view_root_categories_text">View Root Folder</string>
    <string name="main_menu_view_cycles_text">View Cycles</string>
    <string name="main_menu_view_todos_text">View Todos</string>

    <string name="toast_sync_successful">Sync Successful!</string>
    <string name="toast_sync_failed">Sync failed!</string>

    <!-- used if value is not set -->
    <string name="no_string" translatable="false">NULL</string>

    <string name="search">Search</string>
    <string name="search_category_hint">Search Category…</string>
    <string name="search_in_hint">Search in</string>
    <string name="create_category">Create Category</string>
    <string name="create_cycle">Create Cycle</string>
    <string name="create_todo">Create Todo</string>

    <string name="categories">Categories</string>
    <string name="no_categories_created_yet">No Categories\ncreated yet</string>
    <string name="category">Category</string>

    <string name="category_dialog_name_hint">Name</string>
    <string name="category_dialog_parent_hint">Parent</string>
    <string name="category_dialog_no_parent">None</string>
    <string name="dialog_create_new">Create new %s</string>

    <string name="dialog_cancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_edit_title">Edit %s</string>
    <string name="dialog_edit_name_hint">New name</string>

    <string name="category_empty">Category is empty</string>

    <string name="snackbar_text_inserted">\'%s\' inserted</string>
    <string name="snackbar_text_deleted">\'%s\' deleted</string>
    <string name="snackbar_text_updated">\'%s\' updated</string>
    <string name="snackbar_text_undo">Undo</string>
    <string name="snackbar_text_moved_to_parent">Moved %s to parent</string>
    <string name="snackbar_text_moved_into">Moved %s into %s</string>
    <string name="undo_last_action">Undo Last Action</string>

    <string name="cycle">Cycle</string>
    <string name="todo">Todo</string>
    <string name="toast_there_is_no_action_to_undo">There is no action to undo</string>


    <!-- Cycle Frequency Strings -->

    <string name="day_monday">Monday</string>
    <string name="day_tuesday">Tuesday</string>
    <string name="day_wednesday">Wednesday</string>
    <string name="day_thursday">Thursday</string>
    <string name="day_friday">Friday</string>
    <string name="day_saturday">Saturday</string>
    <string name="day_sunday">Sunday</string>

    <string-array name="days_of_week">
        <item>@string/day_monday</item>
        <item>@string/day_tuesday</item>
        <item>@string/day_wednesday</item>
        <item>@string/day_thursday</item>
        <item>@string/day_friday</item>
        <item>@string/day_saturday</item>
        <item>@string/day_sunday</item>
    </string-array>

    <string name="day_prep_monday">Mondays</string>
    <string name="day_prep_tuesday">Tuesdays</string>
    <string name="day_prep_wednesday">Wednesdays</string>
    <string name="day_prep_thursday">Thursdays</string>
    <string name="day_prep_friday">Fridays</string>
    <string name="day_prep_saturday">Saturdays</string>
    <string name="day_prep_sunday">Sundays</string>

    <string-array name="days_of_week_on_preposition">
        <item>@string/day_prep_monday</item>
        <item>@string/day_prep_tuesday</item>
        <item>@string/day_prep_wednesday</item>
        <item>@string/day_prep_thursday</item>
        <item>@string/day_prep_friday</item>
        <item>@string/day_prep_saturday</item>
        <item>@string/day_prep_sunday</item>
    </string-array>

    <string name="frequency_on_preposition">On %s</string>
    <string name="frequency_every_day">Every Day</string>
    <string name="frequency_on_weekdays">On Weekdays</string>
    <string name="frequency_on_weekends">On Weekends</string>
    <string name="frequency_on_days_a_week">%d days a week</string>

    <string name="day_monday_short">Mon</string>
    <string name="day_tuesday_short">Tue</string>
    <string name="day_wednesday_short">Wed</string>
    <string name="day_thursday_short">Thu</string>
    <string name="day_friday_short">Fri</string>
    <string name="day_saturday_short">Sat</string>
    <string name="day_sunday_short">Sun</string>

    <string-array name="days_of_week_short">
        <item>@string/day_monday_short</item>
        <item>@string/day_tuesday_short</item>
        <item>@string/day_wednesday_short</item>
        <item>@string/day_thursday_short</item>
        <item>@string/day_friday_short</item>
        <item>@string/day_saturday_short</item>
        <item>@string/day_sunday_short</item>
    </string-array>

    <string name="exception_server_connection_failed">Connection to Server failed!</string>
    <string name="exception_server_authentication_failed">Authentication on Server failed!</string>
</resources>