<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search_button"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView"/>

    <item
        android:id="@+id/add_category"
        android:title="@string/create_category"
        app:showAsAction="never" />

    <item
        android:id="@+id/add_cycle"
        android:title="@string/create_cycle"
        app:showAsAction="never" />

    <item
        android:id="@+id/add_todo"
        android:title="@string/create_todo"
        app:showAsAction="never" />

    <item
        android:id="@+id/undo_last_action"
        android:title="@string/undo_last_action"
        app:showAsAction="never" />

</menu>