<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:orientation="vertical">

    <!--
    <Button
        android:id="@+id/category_create_delete_button"
        android:backgroundTint="@color/md_theme_errorContainer"
        android:textColor="@color/md_theme_onErrorContainer"
        android:text="DELETE"
        android:layout_gravity="right"
        android:layout_marginBottom="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    -->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/category_edit_dialog_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        android:layout_marginBottom="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/category_dialog_name_hint"
            android:inputType="textAutoCorrect" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/category_edit_dialog_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category_dialog_no_parent"
            android:hint="@string/category_dialog_parent_hint"
            android:inputType="textNoSuggestions"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!--
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp"
        android:gravity="center">
        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_cancel"
            android:textSize="18sp"
            android:textColor="@color/md_theme_onTertiaryContainer"
            android:backgroundTint="@color/md_theme_tertiaryContainer"/>
        <Space
            android:layout_width="64dp"
            android:layout_height="wrap_content" />
        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_ok"
            android:textSize="18sp"
            android:textColor="@color/md_theme_onSecondaryContainer"
            android:backgroundTint="@color/md_theme_secondaryContainer"/>
    </LinearLayout>
    -->
</androidx.appcompat.widget.LinearLayoutCompat>